Add SetLike::{removed, removedAll}